--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,8 @@ body {
 }
 
 .topcontainer {
-	border-color: #14A76C;
-	border-style: solid;
-	border-width: 4px;
+
+	background-color: black;
 }
 /* Style the header of the website */
 /* header {
@@ -31,10 +30,13 @@ body {
 	font-size: 4em;
 	font-family: Arial, Helvetica, sans-serif;
 	color: black;
+	border-color: #14A76C; 
+	border-style: inset;
+	border-width: 4px;
 }
 
 .imagecontainer img {
-	width: 100%;
+	width: 50%;
 	height: auto;
 }
 
