--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,16 @@
 	box-sizing: border-box;
 }
 
+#uploader {
+	width: 100%;
+	height: 200px;
+	background: #464144;
+	padding: 10px;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 200px;
+	margin-bottom: 10px;
+}
 
 /* Style the website content */
 body {
@@ -11,18 +21,8 @@ body {
 }
 
 .topcontainer {
-
 	background-color: black;
 }
-/* Style the header of the website */
-/* header {
-	background-image: url("../img/header_background.png");
-	background-size: cover;
-	background-position: top right;
-	margin: 0px;
-	font-size: 2em;
-	font-family: Arial, Helvetica, sans-serif;
-} */
 
 .imagecontainer {
 	position: relative;
@@ -124,5 +124,7 @@ dd.neednewlineafterthis::after {
 	content: "\A";
 	white-space: pre;
 }
+
+
 
 
