--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ dd.neednewlineafterthis::after {
     display: block;
     margin: auto auto;
     max-width: 100%;
-    max_height: 100%;
+    max-height: 100%;
 }
 
 .small_img {
